# TeX-Match

./: .gitignore  .gitmodules  Cargo.toml  README.md  bors.toml  build.rs
.github/workflows/: ci.yml  release.yml
IconGenerator/: applyTranslations.js  generate.js  package-lock.json  package.json  symbols.yaml
TeX-Match-Linux/: Cargo.toml  build.rs
TeX-Match-Linux/data/: fyi.zoey.TeX-Match.desktop  fyi.zoey.TeX-Match.metainfo.xml
TeX-Match-Linux/flatpak/: fyi.zoey.TeX-Match.json  gen-sources.sh
TeX-Match-Linux/resources/: app.glade
TeX-Match-Linux/snap/: snapcraft.yaml
TeX-Match-Linux/src/: main.rs
TeX-Match-Linux/wix/: main.wxs
TeX-Match-Windows/TeX-Match/: App.xaml  App.xaml.cs  Package.appxmanifest  TeX-Match.csproj  TeX-Match.sln
TeX-Match-Windows/TeX-Match.Core/: TeX-Match.Core.csproj
TeX-Match-Windows/TeX-Match.Core/Detexify/: Bindings.cs  Bindings.tt  Classifier.cs  Methods.xml  Score.cs  Scores.cs  Stroke.cs  StrokeBuilder.cs  StrokeSample.cs  StrokeSampleBuilder.cs  Symbol.cs
TeX-Match-Windows/TeX-Match.Core/Helpers/: Base32.cs  Singleton.cs
TeX-Match-Windows/TeX-Match/Activation/: ActivationHandler.cs  DefaultActivationHandler.cs
TeX-Match-Windows/TeX-Match/Assets/symbols/: M5SW443ZNVRC2T2UGEWV633INU======  M5SW443ZNVRC2T2UGEWV6Y3FNRZWS5LT  M5SW443ZNVRC2T2UGEWV6ZDFM5ZGKZI=  MFWXG3LBORUC2T2UGEWV62LEN52HG2LOOQ======  MFWXG3LBORUC2T2UGEWV62LJNFUW45A=  MFWXG3LBORUC2T2UGEWV6ZDPORZWS===  MFWXG43ZNVRC2T2UGEWV62DTNRQXG2A=  MFWXG43ZNVRC2T2UGEWV62LOORSXEY3BNQ======  MFWXG43ZNVRC2T2UGEWV63DFMZ2HE2LHNB2GQYLSOBXW63TT  MFWXG43ZNVRC2T2UGEWV63DFMZ2HE2LHNB2HG4LVNFTWC4TSN53Q====  MFWXG43ZNVRC2T2UGEWV63DFOE======  (+496 more)
TeX-Match-Windows/TeX-Match/Helpers/: ResourceExtensions.cs
TeX-Match-Windows/TeX-Match/Properties/: AssemblyInfo.cs
TeX-Match-Windows/TeX-Match/Services/: ActivationService.cs  NavigationService.cs
TeX-Match-Windows/TeX-Match/Views/: Base32.cs  Detextify.cs  MainPage.xaml  MainPage.xaml.cs  SymbolListItem.cs
data/: fyi.zoey.TeX-Match.metainfo.xml
flatpak/: fyi.zoey.TeX-Match.json  gen-sources.sh  uk.co.mrbenshef.TeX-Match.json
flatpak/data/: uk.co.mrbenshef.TeX-Match.desktop  uk.co.mrbenshef.TeX-Match.metainfo.xml
flatpak/fyi.zoey.TeX-Match/: fyi.zoey.TeX-Match.json
flatpak/uk.co.mrbenshef.TeX-Match/: generated-sources.json  uk.co.mrbenshef.TeX-Match.json
resources/: app.glade
scripts/: generate_icons.py
snap/: snapcraft.yaml
snap/gui/: tex-match.desktop
src/: main.rs
wix/: main.wxs
(+1 files in other folders)
