[package]
name = "tex-match"
version = "1.2.0"
authors = ["Zoey Sheffield <me@zoey.fyi>"]
edition = "2018"
description = """Search through over 1000 different LaTeX symbols by sketching"""
license = "MIT"
homepage = "https://tex-match.zoey.fyi"
repository = "https://github.com/zoeyfyi/tex-match/"
keywords = ["gtk", "computer-vision", "linux", "latex", "tex"]
categories = ["computer-vision"]
exclude = [
    "submodules/flatpak-builder-tools", 
    "submodules/gvsbuild", 
    "submodules/Windows-10-Dark",
    "flatpak",
    "snap",
    "wix",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GTK
glib = "0.10"
gdk = "0.13"
gdk-pixbuf = "0.9"
pango = "0.9"
cairo-rs = "0.9"
# GTK utils
gladis = "0.4.1"
gladis_proc_macro = "0.4.1"
shrinkwraprs = "0.3.0"
# Logging
log = "0.4.14"
env_logger = "0.8.3"
# TeX classification
detexify = "0.4.0"
# Misc utils
dirty2 = "0.1.0"
simple-error = "0.2"
itertools = "0.10.0"
base64 = "0.13.0"
single_value_channel = "1.2.2"

[dependencies.gtk]
version = "0.9"
features = ["v3_16"]

[dependencies.gio]
version = "0.9"
features = ["v2_44"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
fs_extra = "1.2.0"